--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Menu JS</title>
-  <!-- Déclaration de la feuille de style -->
+  
   <link rel="stylesheet" href="/src/css/components/menu.css" />
   <script type="module" src="/src/js/script.js"></script>
 </head>
 
 <body>
-  <!-- En-tête de la page -->
+  
   <header class="header container">
 
     <div class="header__end">
@@ -20,33 +20,31 @@
         🍔
       </button>
 
-      <!-- Menu principal -->
+      
       <nav class="header__menu menu" id="mainNav" aria-hidden="true">
         <ul class="menu__list list-unstyled">
           <li class="menu__item">
-            <a class="menu__link" href="#">Item de menu un</a>
+            <a class="menu__link" href="chat.html">chat</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#">Item de menu deux</a>
+            <a class="menu__link" href="chien.html">chien</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#">Item de menu trois</a>
+            <a class="menu__link" href="index.html">accueil</a>
           </li>
           <li class="menu__item">
             <a class="menu__link" href="#">Item de menu quatre</a>
           </li>
         </ul>
       </nav>
-      <!-- Fin du menu principal -->
+      
     </div>
   </header>
-  <!-- Contenu principal de la page -->
+  
   <main>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et est adipisci repellat aliquid, sit commodi facere
-      similique quidem iste sunt accusamus accusantium ab unde dolore quaerat voluptatibus error voluptatem molestiae?
-    </p>
+    <p>Bienvenue sur notre site, voici une présentation détaillé de nos chats et chien a l'adoption</p>
   </main>
-  <!-- Fin du contenu principal -->
+
 
 </body>
 
